--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 /client/.env.test.local
 /client/.env.production.local
 
-/server/.env.local
+/server/.env
 /server/.env.development.local
 /server/.env.test.local
 /server/.env.production.local
